# wolf

./: .gitignore  AI_INTEGRATION.md  LICENSE  README.md  gamerule.md  pyproject.toml
.trae/specs/create-werewolf-game/: checklist.md  spec.md  tasks.md
tests/: test_game_logic.py  test_server_integration.py  verify_system.py
wolf/: cli.py
wolf/client/: cli_client.py
wolf/server/: app.py  connection_manager.py  models.py
wolf/server/game/: engine.py  roles.py
wolf/web/static/: app.js  index.html  style.css
