[project]
name = "wolf"
version = "0.1.0"
description = "Wolf Project"
authors = [
    {name = "Shihao Shen",email = "shihao@shihaoshen.qzz.io"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.132.0,<0.133.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "typer (>=0.24.1,<0.25.0)",
    "websockets (>=16.0,<17.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[project.scripts]
wolf = "wolf.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
